# testproject

./: .gitlab-ci.yml  .lgtm.yml  Makefile.am  README.md  configure.ac
debian/: changelog  control  postinst
src/: Makefile.am
src/foo/: Makefile.am  foo.c
src/tests/python/: Makefile.am  setup.py
